# lily

./: .dockerignore  AUTHORS  Cargo.toml  Dockerfile  README.md  TODO.md  VERSION  full-diff.patch
doc/: book.toml
examples/sudo/config/: sudo-backdoored.toml
fuzzers/aflpp/: rosa-trace.h
fuzzers/aflpp/patches/: aflpp-qemuafl-build.patch  aflpp-rosa.patch  qemuafl-rosa.patch
src/: clustering.rs  trace.rs
src/cli/: rosa.rs  rosa_evaluate.rs  rosa_filter_diff.rs  rosa_generate_config.rs  rosa_simulate.rs  rosa_trace.rs  tui.rs
src/config/: mod.rs  phase_one.rs
src/distance_metric/: mod.rs
src/fuzzer/: aflpp.rs  mod.rs
src/oracle/: mod.rs
